[BORN-10] add z-index calc, and repair button style

--- a/app/assets/stylesheets/base/_global.sass
+++ b/app/assets/stylesheets/base/_global.sass
@@ -23,7 +23,6 @@
 
 // born-blue
 $crs-primary-color: #4681B5
-
 $crs-secondary-color: #333739
 $crs-tertiary-color: #eee
 $crs-quaternary-color: #ccc
@@ -33,7 +32,6 @@ $crs-success-color: #43AC6A
 $crs-alert-color: #f08a24
 $crs-info-color: #5fadd6
 $crs-global-radius: 0px
-$crs-userpage-celebrant-padding: 2rem
 $crs-global-shadow: 0px 1px 15px rgba(#000,0.5)
 $crs-global-letter-spacing: 0.5px
 // z-index stack concept
