--- a/app/assets/stylesheets/layout/_modal.sass
+++ b/app/assets/stylesheets/layout/_modal.sass
@@ -5,7 +5,7 @@
   left: 0
   width: 100%
   height: 100%
-  z-index: $z-index-list
+  z-index: z-calc($z-index-list, modal)
 
 .modal__foreground
   position: absolute
