--- a/app/assets/stylesheets/layout/_propositions.sass
+++ b/app/assets/stylesheets/layout/_propositions.sass
@@ -4,9 +4,6 @@
   padding: 2rem
   margin-bottom: 2rem
 
-.propositions__delete
-  float: right
-
 .chosen-proposition__item
   display: block
   margin-bottom: 10px
