--- a/app/assets/stylesheets/layout/_userpage.sass
+++ b/app/assets/stylesheets/layout/_userpage.sass
@@ -1,3 +1,4 @@
+$crs-userpage-celebrant-padding: 2rem
 
 .user__container,
   position: relative
